--- a/index.html
+++ b/index.html
@@ -19,11 +19,23 @@
       context.lineWidth = 4;
       context.beginPath();
       context.rect(100, 100, 400, 400);
-      context.stroke();
+      //context.stroke();
 
       context.beginPath();
       context.arc(300, 300, 100, 0, Math.PI * 2);
-      context.stroke();
+      //context.stroke();
+
+      for (let i = 0; i < 5; i++) {
+        let width = 60;
+        let height = 60;
+        let gap = 20;
+        let x = 100 + (width + gap) * i;
+        let y = 100;
+
+        context.beginPath();
+        context.rect(x, y, width, height);
+        context.stroke();
+      }
     </script>
   </body>
 </html>
