--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=>, initial-scale=1.0" />
-    <title>Document</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Javascript Animation Exercise</title>
   </head>
   <body>
-    <canvas width="600" height="600"></canvas>
+    <canvas width="600" height="600"></canvas>;
 
     <script>
       let canvas = document.querySelector("canvas");
@@ -26,15 +26,23 @@
       //context.stroke();
 
       for (let i = 0; i < 5; i++) {
-        let width = 60;
-        let height = 60;
-        let gap = 20;
-        let x = 100 + (width + gap) * i;
-        let y = 100;
+        for (let j = 0; j < 5; j++) {
+          let width = 60;
+          let height = 60;
+          let gap = 20;
+          let x = 100 + (width + gap) * i;
+          let y = 100 + (height + gap) * j;
 
-        context.beginPath();
-        context.rect(x, y, width, height);
-        context.stroke();
+          context.beginPath();
+          context.rect(x, y, width, height);
+          context.stroke();
+
+          if (Math.random() > 0.5) {
+            context.beginPath();
+            context.rect(x + 8, y + 8, width - 16, height - 16);
+            context.stroke();
+          }
+        }
       }
     </script>
   </body>
